Using google fonts and adding a video.

--- a/Páginas/Style.css
+++ b/Páginas/Style.css
@@ -65,3 +65,9 @@ a {
 a:hover {
     color: #A2375D;
 }
+
+.press-start-2p-regular {
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
